WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206716
macCatalyst: I-Beam is too conservative, doesn't show up in editable areas with no text
https://bugs.webkit.org/show_bug.cgi?id=206716
Summary
macCatalyst: I-Beam is too conservative, doesn't show up in editable areas wi...
Tim Horton
Reported
2020-01-23 16:38:00 PST
macCatalyst: I-Beam is too conservative, doesn't show up in editable areas with no text
Attachments
Patch
(7.26 KB, patch)
2020-01-23 16:38 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(7.31 KB, patch)
2020-01-23 18:11 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2020-01-23 16:38:24 PST
Created
attachment 388615
[details]
Patch
Tim Horton
Comment 2
2020-01-23 16:38:25 PST
<
rdar://problem/58359523
>
alan
Comment 3
2020-01-23 17:59:44 PST
Comment on
attachment 388615
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=388615&action=review
> Source/WebCore/editing/VisiblePosition.cpp:675 > + Node* node = m_deepPosition.anchorNode();
auto*
> Source/WebCore/editing/VisiblePosition.cpp:679 > + InlineBox* inlineBox;
nullptr it please
> Source/WebCore/editing/VisiblePosition.cpp:680 > + int caretOffset;
this should have an initial value too
> Source/WebCore/editing/VisiblePosition.cpp:687 > + FloatRect localRect(root.x(), root.selectionTop(), root.width(), root.selectionHeight());
isn't "auto localRect = FloatRect { }" the preferred way by now?
alan
Comment 4
2020-01-23 18:03:38 PST
Comment on
attachment 388615
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=388615&action=review
> Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:2759 > + auto renderer = hitTestResult.innerNode()->renderer();
auto*
Tim Horton
Comment 5
2020-01-23 18:11:15 PST
Created
attachment 388633
[details]
Patch
Tim Horton
Comment 6
2020-01-23 18:22:26 PST
https://trac.webkit.org/changeset/255046/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug