macCatalyst: I-Beam is too conservative, doesn't show up in editable areas with no text https://bugs.webkit.org/show_bug.cgi?id=206716 <rdar://problem/58359523>

Reviewed by Simon Fraser.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::lineCaretExtent):
(WebKit::populateCaretContext):
(WebKit::WebPage::positionInformation):
Instead of uniting the caret position for the first and last position
on the line to find the I-Beam region, use the bounds of the selection
rect for the line, which extends beyond existing text, matching our
traditional behavior of showing the I-Beam over blank regions.

* editing/VisiblePosition.cpp:
(WebCore::VisiblePosition::absoluteSelectionBoundsForLine const):
* editing/VisiblePosition.h:
Expose the bounds of the possible selection for the line that the given position belongs to.


Canonical link: https://commits.webkit.org/219720@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255046 268f45cc-cd09-0410-ab3c-d52691b4dbfc